fix border menu discoloration on mobile

--- a/themes/dimension/static/assets/css/main.css
+++ b/themes/dimension/static/assets/css/main.css
@@ -1496,7 +1496,7 @@ input, select, textarea {
 
 					#header nav ul li {
 						border-left: 0;
-						border-top: solid 1px #ffffff;
+						border-top: solid 1px var(--border-menus);
 					}
 
 						#header nav ul li:first-child {
